Changes - Moved shell script locations - Added Rsync for dotfiles dir - Added and Removed some installed apps and/or tools

--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	email = zonilyjame@gmail.com
-	name = Zonily Jame
+	name = Zonily Jame Pesquera
 [core]
 	safecrlf = false
 	editor = /usr/bin/vim
